--- a/public/content/chatroom.html
+++ b/public/content/chatroom.html
@@ -137,7 +137,7 @@
                                 html += '<li><div class="messageImg message  '+senderStyle+'">' +
                                     '<div class="sender">' + value.sender + '</div>' +
                                     '<div class="timestamp">' + formatDate(value.timestamp) + '</div>' +
-                                    '<div class="img"><img src="/content/images/'+value.message+'" alt="'+value.message+'" onError="$(this).hide(); $(this).parent().find(\'span\').show();"></div>' +
+                                    '<div class="img"><img src="/content/images/'+value.message+'" data-src="'+value.message+'" onError="$(this).hide(); $(this).parent().find(\'span\').show();"></div>' +
                                     '<div class="hiddenMsg"><span style="display:none">' +value.message+ '</span></div>' +
                                 '</div></li>';
                             }
@@ -230,7 +230,7 @@
                 $('#messages').append('<li><div class="messageImg message '+senderStyle+'">' +
                                     '<div class="sender">' + sender + '</div>' +
                                     '<div class="timestamp">' + formatDate(timestamp) + '</div>' +
-                                    '<div class="img"><img src="/content/images/'+message+'" alt="'+message+'" onError="$(this).hide(); $(this).parent().find(\'span\').show();"></div>' +
+                                    '<div class="img"><img src="/content/images/'+message+'" data-img="'+message+'" onError="$(this).hide(); $(this).parent().find(\'span\').show();"></div>' +
                                     '<div class="hiddenMsg"><span style="display:none">' +message+ '</span></div>' +
                                     '</div></li>');
             }else{
@@ -265,7 +265,7 @@
                 });
 
             //scroll to bottom
-            $("html, body").animate({ scrollTop: $(document).height() }, 1000);
+            $(".chatroom").animate({ scrollTop: $('#messages').height() }, 1000);
         });
 
         var sendImg = urlParams.get('sendImage');
@@ -396,5 +396,10 @@
             $('.moreBtn span').text( moreBtnText === 'More'? 'Less' : 'More');
             $('.moreOption').toggle();
         });
+
+        //Scroll to end
+        $(document).ready(function(){
+            $(".chatroom").animate({ scrollTop: $('#messages').height() }, 0);
+        })
     </script>
 </html>
