update last seen time (not ready)

--- a/public/content/chatlist.html
+++ b/public/content/chatlist.html
@@ -16,7 +16,7 @@
             <!-- show personal info -->
             <div class="userInfo">
                 <img class="icon"/>  
-                <span class="userID"></span>
+                <span class="userID userIDwUsername"></span>
                 <div class="logout">Log Out</div>
                 <div class="moreBtn">more</div>
             </div>
