--- a/public/content/login.html
+++ b/public/content/login.html
@@ -35,12 +35,13 @@
             .header { background-color: white; padding : 30px 0px 30px 20px;  border-bottom: 1px solid #ddd; }
             .header div {animation-name: icon; animation-duration: 1.5s;}
             .header * {float: left;}
+            .header a { color : black; }
             .header::after {  content: ""; clear: both; display: table; }
             .header h1 { margin : 0 0 0 15px; line-height: 55px;}
             .header .appIcon {height: 55px; }
 
             /* Login page main content */
-            .loginForm { margin: 45px auto; max-width: 500px; border-radius: 10px; box-shadow: 0px 3px 5px 6px #ddd;}
+            .loginForm { margin: 45px auto; max-width: 500px; border-radius: 20px; overflow: hidden; box-shadow: 0px 3px 5px 6px #ddd;}
             .loginForm__form { max-width: 950px; margin: 0 auto; background-color: #f6fafb; }
             .loginForm__form .form { width: fit-content; margin: 0 auto; padding: 35px 0 35px 0;}
             .loginForm__form input { width: 350px;}
@@ -63,24 +64,26 @@
             .forgetPwd { padding: 30px 0px 0px 0px; text-align: right; }
             .forgetPwd span { font-size: 14px; text-decoration: underline; cursor: pointer; }
             #resetForm { display: none; animation-name: fadeInTop; animation-duration: 1s; }
-            #resetForm .msg {font-size: 12px; }
+            #resetForm .msg {font-size: 12px; padding: 3px 0px;}
 
             /* Login page footer */
-            .loginForm__footer {margin-top: 50px; background-color: #000b21; width: 100%; padding: 35px 0px;}
-            .loginForm__footer .container {width: 82%; margin: 0 auto;}
-            .loginForm__footer .container * {color: white;}
-            .loginForm__footer .container div{float: left;}
-            .loginForm__footer .container::after {content: ''; clear: both; display: table;}
-            .loginForm__footer .left {width: 40%;}
-            .loginForm__footer .right {width: 60%;}
+            .footer {margin-top: 50px; background-color: #000b21; width: 100%; padding: 35px 0px;}
+            .footer .container {width: 82%; margin: 0 auto;}
+            .footer .container * {color: white;}
+            .footer .container div{float: left;}
+            .footer .container::after {content: ''; clear: both; display: table;}
+            .footer .left {width: 40%;}
+            .footer .right {width: 60%;}
         </style>
     </head>
     <body class="loginPage">
         <header class="header">
-            <div>
-                <img class="appIcon" src="/images/app_icon.png" alt="app icon" />
-                <h1>TELECHAT</h1>
-            </div>
+            <a href="login.html">
+                <div>
+                    <img class="appIcon" src="/images/app_icon.png" alt="app icon" />
+                    <h1>TELECHAT</h1>
+                </div>
+            </a>
         </header>
 
         <main class="main">
@@ -137,7 +140,7 @@
             </div>
         </main>
 
-        <footer class="loginForm__footer">
+        <footer class="footer">
             <div class="container">
                 <div class="left">
                     <div> 
@@ -287,7 +290,7 @@
                             }
                         },
                         success: function(data){
-                            $('#resetForm .msg').html('Email sent!');
+                            $('#resetForm .msg').html('Email sent, please finish the process within 15mins!');
                         }                
                     });
                 }
