--- a/public/content/login.html
+++ b/public/content/login.html
@@ -7,74 +7,7 @@
         <title>TELECHAT - LOGIN</title>
         <link href="/styles/main.css" rel="stylesheet" />
         <script src="/scripts/jquery.min.js"></script>
-        <script src="/scripts/scripts.js" defer></script>
-        <style>
-            @keyframes icon {
-                0% { transform: translateX(-10px); }
-                80% { transform: translateX(2px); }
-                100% { transform: translateX(0px); }
-            }
-
-            @keyframes fadeInTop {
-                0% { transform: translateY(-15px); opacity: 0; }
-                100% { transform: translateY(0px);  opacity: 100; }
-            }
-
-            @keyframes fadeInBottom {
-                0% { transform: translateY(15px); opacity: 0; }
-                100% { transform: translateY(0px);  opacity: 100; }
-            }
-
-            @keyframes customBTN {
-                0% { transform: scale(1);}
-                100% { transform: scale(1.02); box-shadow: 0px 1px 3px black;}
-            }
-
-            /* LOGIN page*/
-            /* Login page header */
-            .header { background-color: white; padding : 30px 0px 30px 20px;  border-bottom: 1px solid #ddd; }
-            .header div {animation-name: icon; animation-duration: 1.5s;}
-            .header * {float: left;}
-            .header a { color : black; }
-            .header::after {  content: ""; clear: both; display: table; }
-            .header h1 { margin : 0 0 0 15px; line-height: 55px;}
-            .header .appIcon {height: 55px; }
-
-            /* Login page main content */
-            .loginForm { margin: 45px auto; max-width: 500px; border-radius: 20px; overflow: hidden; box-shadow: 0px 3px 5px 6px #ddd;}
-            .loginForm__form { max-width: 950px; margin: 0 auto; background-color: #f6fafb; }
-            .loginForm__form .form { width: fit-content; margin: 0 auto; padding: 35px 0 35px 0;}
-            .loginForm__form input { width: 350px;}
-            .loginForm__form .loginBtn { width: 350px; margin: 0px; padding: 5px 0px; height: 35px; position: relative; margin-top: 15px;}
-            .loginForm__form .button {width: 100%; margin-right: 15px; font-size: 14px; border-color: #0478d1; border-radius: 10px; background-color: #0478d1; color : white; line-height: 35px; cursor: pointer; box-shadow: 0px 0px 2px black;}
-            .loginForm__form .button:hover {animation-name: customBTN; animation-duration: 0.5s; animation-fill-mode: forwards;}     
-            .loginForm__changeForm { width: 100%; }
-            .loginForm__changeForm::after { content: ''; display: table; clear: both; }
-            .loginForm__changeForm .tab { width: 50%; font-weight: bold; float: left; text-align: center; padding: 8px 0px; background-color: white; border-bottom: 3px solid white; cursor: pointer; }
-            .loginForm__changeForm .active { background-color: #f6fafb; border-bottom: 3px solid #0478d1; }
-            .loginForm__changeForm .tab:first-child {width: calc(50% - 1px); border-right: 1px solid #ddd}
-
-            /* Login page login form */
-            .loginForm__form-login { animation-name: fadeInBottom; animation-duration: 1s;}
-
-            /* Login page signup form */
-            .loginForm__form-signup {display: none; animation-name: fadeInBottom; animation-duration: 1s;}
-
-            /* Forget password form */        
-            .forgetPwd { padding: 30px 0px 0px 0px; text-align: right; }
-            .forgetPwd span { font-size: 14px; text-decoration: underline; cursor: pointer; }
-            #resetForm { display: none; animation-name: fadeInTop; animation-duration: 1s; }
-            #resetForm .msg {font-size: 12px; padding: 3px 0px;}
-
-            /* Login page footer */
-            .footer {margin-top: 50px; background-color: #000b21; width: 100%; padding: 35px 0px;}
-            .footer .container {width: 82%; margin: 0 auto;}
-            .footer .container * {color: white;}
-            .footer .container div{float: left;}
-            .footer .container::after {content: ''; clear: both; display: table;}
-            .footer .left {width: 40%;}
-            .footer .right {width: 60%;}
-        </style>
+        <script src="/scripts/common_functions.js"></script>
     </head>
     <body class="loginPage">
         <header class="header">
@@ -107,7 +40,7 @@
                             </div>
                         </form>
                         <div class="forgetPwd"><span>Forget Password?</span></div>
-                        <form id="resetForm" action="">
+                        <form id="loginResetForm" action="">
                             <p>Email:</p>
                             <input required type="email" name="email" id="reset-email" placeholder="Enter email"></input>
 
@@ -186,26 +119,6 @@
             </div>
         </footer>
         <script>
-                //Common function to change tab menu
-                function changeTab(showClassName){
-                    if( !$('.'+showClassName).hasClass('active') ){
-                        $('.main').find('.active').removeClass('active');
-                        $('.'+showClassName).addClass('active');
-                        $('.toggleDiv').toggle();
-                    }     
-                }
-
-                //Check if the password & the confirm password fields are the same 
-                function confirmCheck(input) {
-                    if (input.value === $('#signup-password').val() || input.value.length < $('#signup-password').val().length) {
-                        $('#confirmText').hide();
-                        $('#signupBtn').prop('disabled', false);
-                    }else{
-                        $('#confirmText').show();
-                        $('#signupBtn').prop('disabled', true);
-                    }
-                }
-
                  /* LOGIN Page functions */
                  /* Login function: pass username & password to login */
                  function login(){
@@ -286,11 +199,11 @@
                         data: JSON.stringify(data),
                         error: function(err){         
                             if(err.responseJSON.error.statusCode === 404){
-                                $('#resetForm .msg').html('Email not found!');          
+                                $('#loginResetForm .msg').html('Email not found!');          
                             }
                         },
                         success: function(data){
-                            $('#resetForm .msg').html('Email sent, please finish the process within 15mins!');
+                            $('#loginResetForm .msg').html('Email sent, please finish the process within 15mins!');
                         }                
                     });
                 }
@@ -309,16 +222,15 @@
                 });
 
                 //Submit reset form
-                $('#resetForm').submit( function(event) {
+                $('#loginResetForm').submit( function(event) {
                     event.preventDefault();
                     resetPwd();
                 });
                 
                 //Show Reset Password form
                 $('.forgetPwd span').click( function() {
-                    $('#resetForm').toggle();
+                    $('#loginResetForm').toggle();
                 });
-
         </script>
     </body>
 </html>
