--- a/public/content/login.html
+++ b/public/content/login.html
@@ -144,7 +144,7 @@
                         },
                         success: function(){
                             //go to chat list page
-                            window.location = '/content/chatlist.html';
+                            window.location = '/content/chat.html';
                         }
                     });
                 }
@@ -177,7 +177,7 @@
                         },
                         success: function(data){
                             //if signup successful, then go to chatlist page
-                            window.location = '/content/chatlist.html';
+                            window.location = '/content/chat.html';
                         }                
                     });
                 };
